# cjdns-conf-updater

./: .gitignore  README.md  builder.sh  cr.nix  default.nix  flake.nix
src/: CMakeLists.txt  conf-updater.c  conf-updater.h  conf-updater.h.in  conf-updater.rc  nodes.ipv4.conf  nodes.ipv6.conf
